--- a/app/public/account.html
+++ b/app/public/account.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PlanRiseAI | 내계정</title>
   <link rel="manifest" href="/public/manifest.webmanifest" />
+  <meta name="theme-color" content="#1f7a6f" />
+  <link rel="icon" type="image/svg+xml" href="/public/icons/icon.svg" />
+  <link rel="apple-touch-icon" href="/public/icons/icon.svg" />
   <link rel="stylesheet" href="/public/css/styles.css" />
 </head>
 <body>
